handle vanila webSocket

--- a/src/public/views/home.pug
+++ b/src/public/views/home.pug
@@ -9,5 +9,11 @@ html(lang="en")
     header 
       h1 hello YOOM
     main
+      form#nick
+        input(type="text", placeholder="choose a nickname")
+        button save
+      ul
+      form#message
+        input(type="text", placeholder= "Write a message", required)
       button click
     script(src="/public/js/app.js") 
