--- a/src/public/views/home.pug
+++ b/src/public/views/home.pug
@@ -13,9 +13,14 @@ html(lang="en")
         form
           input(placeholder="room name", type="text", required)
           button Enter Room
+        h4 Open Rooms: 
+        ul
       div#room
         h3
         ul 
+          video#myFace(autoplay, playsinline, width="400", height="400")
+          button#mute Mute
+          button#camera Turn Camera Off
           form#name
             input(placeholder="Nickname", type="text", required)
             button Save
